manifests/base/sharded-controller.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: sharded-controller

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sharded-controller
  namespace: sharded-controller
  labels:
    app: sharded-controller
spec:
  selector:
    matchLabels:
      app: sharded-controller
  replicas: 3
  template:
    metadata:
      labels:
        app: sharded-controller
    spec:
      containers:
      - name: sharded-controller
        image: gcr.io/bomsync-214520/shardedcontroller:1604287923
        args:
          - --shard_namespace=$(POD_NAMESPACE)
          - --shard_selector=app=sharded-controller
          - --self_pod_name=$(POD_NAME)
          - --config_map_namespace=$(POD_NAMESPACE)
